<resources>
    <string name="app_name" translatable="false">Packager</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="false">Packager_channel</string>
    <string name="error_no_internet_connection">No Internet Connection</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="urgent">Urgent</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="order_id">Order id# %s</string>
    <string name="order_date_time">%s , %s</string>
    <string name="order_quantity">%d items</string>
    <string name="order_price">%.2f SAR</string>
    <string name="monthly_orders">Monthly Orders</string>
    <string name="daily_orders">Daily Orders</string>
    <string name="my_order">My Orders</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="status_online">Status (Online)</string>
    <string name="my_orders">My Orders</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="personal_info">Personal Information</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="general">General</string>
    <string name="log_out">Log out</string>
    <string name="termsAndConditions">Terms And Conditions</string>
    <string name="about">About Monh</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language</string>
    <string name="phone_number">Phone Number <font color='#FF0000'>*</font></string>
    <string name="arabic_full_number">Full Name <font color='#FF0000'>*</font></string>
    <string name="english_full_name">English Full Name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="password">Password</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="found">Found</string>
    <string name="added">Added</string>
    <string name="logIn">Login</string>
    <string name="get_started_with">Get started with</string>
    <string name="signIn">Sign In</string>
    <string name="email_empty_validation">email can\'t be empty</string>
    <string name="password_empty_validation">Password can\'t be empty</string>
    <string name="userId">ID: %s</string>
    <string name="orderId">Order id# %s</string>
    <string name="start_prepare">start prepare</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="notFound">Not Found</string>
    <string name="pcs">Pcs</string>
    <string name="qr_un_valid">Barcode not match the product Barcode</string>
    <string name="no_more_items">You have removed all items</string>
    <string name="all_items_added">You have added all items</string>
    <string name="add_product_first">please add product first</string>
    <string name="enter_number_of_cartons">Please enter number of carton</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot your Password?</string>
    <string name="forgot_password_header">Forgot Password</string>
    <string name="forgot_password_msg">Enter the email address associated with your account</string>
    <string name="send">Send</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_out_msg">Are you sure you want to log out?</string>
    <string name="log_out_yes">Yes</string>
    <string name="log_out_no">Not Now</string>
    <string name="choose_language">Choose Language</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">عربي</string>
    <string name="old_password">Old Password <font color='#FF0000'>*</font></string>
    <string name="new_password">New Password <font color='#FF0000'>*</font></string>
    <string name="repeat_password">Repeat New Password <font color='#FF0000'>*</font></string>
    <string name="main_error_try_again">Try again</string>
    <string name="password_repasword_match_validation">Password and rePassword must match</string>
    <string name="password_changed_successfully">Password has changed successfully</string>
    <string name="login_failed">Email or password is not correct</string>
    <string name="no_orders">There is no orders now</string>
    <string name="no_notifications">There is no notifications now</string>
    <string name="permissions_rejection">we need to download pdf to be able to print it</string>
    <string name="no_pdf_app_installed">there is no pdf viewer app installed, please install an app to be able to view the pdf</string>
    <string name="please_handle_all_products">Please handle all products</string>
    <string name="nedd_call_permission">Monh need call permission to call the seller</string>
    <string name="unauthorized_log_out_msg">session expired, you need to log in again</string>
    <string name="empty_validation">Please fill the mandatory fields first</string>
    <string name="status_off_message">Change your status to online will allow you to receive new requests and increase your profits.</string>
    <string name="view">View</string>
    <string name="no_contacts_msg">No contacts are found</string>
    <string name="status_offline">Status (Offline)</string>
    <string name="phone_validation">please enter valid saudi arabia number</string>
    <string name="image_size_validation">Max size of image is 2 MB</string>
    <string name="upload_image_failed">Failed to upload the image</string>
    <string name="no_terms_msg">Terms and Conditions Not Found</string>
</resources>
