<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_my_orders">

    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.example.mvvmstarterproject.ui.home.my_orders.MyOrdersContainerFragment"
        android:label="@string/menu_my_orders"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.mvvmstarterproject.ui.home.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mvvmstarterproject.ui.home.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_nav_settings_to_contactUsFragment"
            app:destination="@id/contactUsFragment" />
    </fragment>
    <fragment
        android:id="@+id/contactUsFragment"
        android:name="com.example.mvvmstarterproject.ui.home.settings.contactUs.ContactUsFragment"
        android:label="contact_us_fragment"
        tools:layout="@layout/contact_us_fragment" />
</navigation>