<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/ordersTabLayOut"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:tabIndicatorGravity="bottom"
        app:tabSelectedTextColor="@color/taupe"
        app:tabTextColor="@color/taupegray_1"
        app:tabIndicatorHeight="2dp"
        app:tabIndicatorColor="@color/taupe"
        app:tabRippleColor="@android:color/transparent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/openTab"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/open"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urgent"/>
        <com.google.android.material.tabs.TabItem
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/closed"/>
    </com.google.android.material.tabs.TabLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/munsell"/>
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/ordersViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>