<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        tools:context=".ui.home.settings.change_language.ChangeLanguageFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_language"
            android:textColor="@color/dimGray"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            style="@style/CircularTextAppearance.Book"/>
        <LinearLayout
            android:id="@+id/englishLayOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/CircularTextAppearance.Regular"
                android:textSize="15sp"
                android:textColor="@color/taupe"
                android:text="@string/english"/>
            <ImageView
                android:id="@+id/englishIcon"
                android:layout_width="15dp"
                android:layout_height="11dp"
                android:src="@drawable/ic_checked"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/munsell"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:id="@+id/arabicLayout"
            android:gravity="center"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/CircularTextAppearance.Regular"
                android:textSize="15sp"
                android:textColor="@color/taupe"
                android:text="@string/arabic"/>
            <ImageView
                android:id="@+id/arabicIcon"
                android:layout_width="15dp"
                android:layout_height="11dp"
                android:src="@drawable/ic_checked"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/sunglow"
            android:text="@string/done"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/taupe"
            app:cornerRadius="6dp"/>
    </LinearLayout>
</LinearLayout>