<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.home.settings.change_password.ChangePasswordFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/password_icon"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:inputType="textPassword"
            android:hint="@string/old_password"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/password_icon"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:inputType="textPassword"
            android:hint="@string/new_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleDrawable="@drawable/password_icon"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:inputType="textPassword"
            android:hint="@string/repeat_password" />

    </com.google.android.material.textfield.TextInputLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        app:cornerRadius="6dp"
        android:textStyle="bold"
        android:textSize="@dimen/font_size_normal"
        android:textColor="@color/taupe"
        android:backgroundTint="@color/sunglow"
        android:text="@string/save"/>
</LinearLayout>